# FindStar-backend

./: .gitignore  import_data.py  import_data2.py  pyproject.toml  readme.md
apps/find_star/: admin.py  apps.py  models.py
apps/find_star/schema/: __init__.py  query.py
config/: config.example.ini
poster/: generate_poster.py  test.py
star/: schema.py  settings.py  urls.py
translation/locale/zh_Hans/LC_MESSAGES/: django.po
