[tool.poetry]
name = "find-star"
version = "0.1.0"
description = ""
authors = ["Rainshaw <rxg@live.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.2"
graphene-django = "^3.0.0b1"
mysqlclient = {version = "^2.0.3", optional = true}
psycopg2 = {version = "^2.8.6", optional = true}
configparser = "^5.0.2"
daphne = {version = "^3.0.2", optional = true}
uWSGI = {version = "^2.0.19", optional = true}

[tool.poetry.extras]
mysql = ["mysqlclient"]
pgsql = ["psycopg2"]
wsgi = ["uWSGI"]
asgi = ["daphne"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
